--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website</title>
+    <meta name="description" content="Track Russian military losses in Ukraine with interactive visualizations and data charts, updated regularly.">
+    <meta name="keywords" content="russian losses, ukraine war data, war statistics, dashboard, ukraine conflict, military data">
+
+    <title>Russian Losses in Ukraine – Interactive Dashboard</title>
+
+    <link rel="icon" href="favicon-32x32.png" type="image/x-icon" />
 </head>
 <body>
 
