--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Track Russian military losses in Ukraine with interactive visualizations and data charts, updated regularly.">
     <meta name="keywords" content="russian losses, ukraine war data, war statistics, dashboard, ukraine conflict, military data">
+    <meta name="google-site-verification" content="58-Ma0fPvEgsUcyrClRf-l4mDZ3NqKSzlP7Nu6ZhFtE" />
 
     <title>Russian Losses in Ukraine – Interactive Dashboard</title>
 
